--- a/set-write-permission-job.yml
+++ b/set-write-permission-job.yml
@@ -30,6 +30,6 @@ steps:
       from github import Github
       
       g = Github("$(NewToken)")
-      repo = g.get_organization("TestMQuince").get_repo("TestRepository")
-      g.get_organization("TestMQuince").get_team(4234553).set_repo_permission(repo, "push")
+      repo = g.get_organization("PSW-2020-ORG3").get_repo("MQuince")
+      g.get_organization("MQuince").get_team(4207823).set_repo_permission(repo, "push")
 
