--- a/set-read-permission-job.yml
+++ b/set-read-permission-job.yml
@@ -32,6 +32,6 @@ steps:
     script: |
       from github import Github
       
-      g = Github("$(token)")
-      repo = g.get_organization("TestMQuince").get_repo("TestRepository")
-      g.get_organization("TestMQuince").get_team(4234553).set_repo_permission(repo, "pull")
+      g = Github("$(NewToken)")
+      repo = g.get_organization("PSW-2020-ORG3").get_repo("MQuince")
+      g.get_organization("MQuince").get_team(4207823).set_repo_permission(repo, "pull")
