--- a/set-read-permission-job.yml
+++ b/set-read-permission-job.yml
@@ -34,4 +34,4 @@ steps:
       
       g = Github("$(NewToken)")
       repo = g.get_organization("PSW-2020-ORG3").get_repo("MQuince")
-      g.get_organization("MQuince").get_team(4207823).set_repo_permission(repo, "pull")
+      g.get_organization("PSW-2020-ORG3").get_team(4207823).set_repo_permission(repo, "pull")
