--- a/MQuince/MQuince.WebAPI/appsettings.json
+++ b/MQuince/MQuince.WebAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MQuinceDB": "server=localhost;port=3306;database=mquince;user=root;password=root"
+  }
 }
