Add unit tests for specialization service mapper

--- a/MQuince/MQuince.Repositories.Tests/MQuince.Repositories.Tests.csproj
+++ b/MQuince/MQuince.Repositories.Tests/MQuince.Repositories.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MQuince.Repository.SQL\MQuince.Repository.SQL.csproj" />
+    <ProjectReference Include="..\MQuince.Services.Contracts\MQuince.Services.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
