--- a/MQuince/MQuince.Services.Tests/MQuince.Services.Tests.csproj
+++ b/MQuince/MQuince.Services.Tests/MQuince.Services.Tests.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MQuince.Entities\MQuince.Entities.csproj" />
+    <ProjectReference Include="..\MQuince.Services.Contracts\MQuince.Services.Contracts.csproj" />
+    <ProjectReference Include="..\MQuince.Services.Implementation\MQuince.Services.Implementation.csproj" />
+  </ItemGroup>
+
 </Project>
