--- a/set-read-permission-job.yml
+++ b/set-read-permission-job.yml
@@ -6,7 +6,11 @@
 schedules:
 - cron: "1 0 * * 1"
   displayName: Daily midnight build
+  branches:
+    include:
+    - develop
 
+pr: none
 trigger: none
 
 pool:
