--- a/MQuince/MQuince.WebAPI/appsettings.json
+++ b/MQuince/MQuince.WebAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MQuinceDB": "server=localhost;port=3306;database=mquince;user=root;password=root"
+    "MQuinceDB": "server=mysql;port=3306;database=mquince;user=user;password=user;"
   }
 }
