--- a/MQuince/MQuince.Repository.SQL/MQuince.Repository.SQL.csproj
+++ b/MQuince/MQuince.Repository.SQL/MQuince.Repository.SQL.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\MQuince.Services.Contracts\MQuince.Services.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
