--- a/MQuince/MQuince.WebAPI/MQuince.WebAPI.csproj
+++ b/MQuince/MQuince.WebAPI/MQuince.WebAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="VueCliMiddleware" Version="3.1.2" />
   </ItemGroup>
