--- a/MQuince/MQuince.Application/MQuince.Application.csproj
+++ b/MQuince/MQuince.Application/MQuince.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MQuince.Repository.Contracts\MQuince.Repository.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Repository.SQL\MQuince.Repository.SQL.csproj" />
     <ProjectReference Include="..\MQuince.Services.Contracts\MQuince.Services.Contracts.csproj" />
