--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,34 @@
 services:
-
   servers:
-    build: ./MQuince
-    image: mquince
+    build:
+      context: ./MQuince
+      args:
+        DATABASE_USERNAME: user
+        DATABASE_PASSWORD: user
+        DATABASE_DOMAIN: mysql
+        DATABASE_SCHEMA: mquince
+        DATABASE_PORT: 3306
+        STAGE: dev 
+    image: mquince-mysql
     container_name: mquince
     restart: on-failure
     networks:
       - demo
     ports:
-      - 8081:5000
+      - 5000:5000
     environment:
       DATABASE_USERNAME: user
       DATABASE_PASSWORD: user
       DATABASE_DOMAIN: mysql
       DATABASE_SCHEMA: mquince
-    depends_on: 
+      DATABASE_PORT: 3306
+      STAGE: dev
+      SHOW_ENV: "TRUE"
+    depends_on:
       - mysql
 
   mysql:
-    image: mysql:latest
+    image: mysql:8.0.19
     container_name: mysql
     restart: always
     networks:
