--- a/MQuince/MQuince.Services.Tests/MQuince.Services.Tests.csproj
+++ b/MQuince/MQuince.Services.Tests/MQuince.Services.Tests.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.15.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Shouldly" Version="4.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
@@ -18,6 +21,7 @@
     <ProjectReference Include="..\MQuince.Entities\MQuince.Entities.csproj" />
     <ProjectReference Include="..\MQuince.Services.Contracts\MQuince.Services.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Services.Implementation\MQuince.Services.Implementation.csproj" />
+    <ProjectReference Include="..\MQuince.WebAPI\MQuince.WebAPI.csproj" />
   </ItemGroup>
 
 </Project>
