--- a/MQuince/MQuince.Integration.Services.Constracts/MQuince.Integration.Services.Constracts.csproj
+++ b/MQuince/MQuince.Integration.Services.Constracts/MQuince.Integration.Services.Constracts.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.2" />
+    <PackageReference Include="QRCoder" Version="1.4.1" />
+  </ItemGroup>
+
 </Project>
