--- a/MQuince/MQuince.WebAPI/MQuince.WebAPI.csproj
+++ b/MQuince/MQuince.WebAPI/MQuince.WebAPI.csproj
@@ -23,5 +23,9 @@
     <ProjectReference Include="..\MQuince.Services.Implementation\MQuince.Services.Implementation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
