--- a/MQuince/MQuince.Services.Implementation/MQuince.Services.Implementation.csproj
+++ b/MQuince/MQuince.Services.Implementation/MQuince.Services.Implementation.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
   <ItemGroup>
