--- a/MQuince/MQuince.WebAPI/MQuince.WebAPI.csproj
+++ b/MQuince/MQuince.WebAPI/MQuince.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -21,10 +21,6 @@
     <ProjectReference Include="..\MQuince.Repository.SQL\MQuince.Repository.SQL.csproj" />
     <ProjectReference Include="..\MQuince.Services.Contracts\MQuince.Services.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Services.Implementation\MQuince.Services.Implementation.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 
