Modify Dockerfile.Integration to take PORT as ARG

--- a/MQuince/Dockerfile.Integration
+++ b/MQuince/Dockerfile.Integration
@@ -25,6 +25,7 @@ ARG DATABASE_DOMAIN
 ARG DATABASE_SCHEMA
 ARG DATABASE_PORT
 ARG STAGE
+ARG PORT
 
 ENV DATABASE_USERNAME = $DATABASE_USERNAME
 ENV DATABASE_PASSWORD = $DATABASE_PASSWORD
@@ -32,6 +33,7 @@ ENV DATABASE_DOMAIN = $DATABASE_DOMAIN
 ENV DATABASE_SCHEMA = $DATABASE_SCHEMA
 ENV DATABASE_PORT = $DATABASE_PORT
 ENV STAGE = $STAGE
+ENV PORT = $PORT
 
 WORKDIR /app/MQuince.WebAPI
 ENV PATH $PATH:/root/.dotnet/tools
