--- a/MQuince/MQuince.Integration.HospitalApp.Tests/MQuince.Integration.HospitalApp.Tests.csproj
+++ b/MQuince/MQuince.Integration.HospitalApp.Tests/MQuince.Integration.HospitalApp.Tests.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.15.1" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-beta.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha07" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="87.0.4280.8800" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
