--- a/MQuince/MQuince.Integration.Services.Constracts/MQuince.Integration.Services.Constracts.csproj
+++ b/MQuince/MQuince.Integration.Services.Constracts/MQuince.Integration.Services.Constracts.csproj
@@ -6,7 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="iTextSharp" Version="5.5.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-beta.1" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha07" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="87.0.4280.8800" />
   </ItemGroup>
 
 </Project>
