--- a/MQuince/MQuince.Integration.Services.Implementation/MQuince.Integration.Services.Implementation.csproj
+++ b/MQuince/MQuince.Integration.Services.Implementation/MQuince.Integration.Services.Implementation.csproj
@@ -7,8 +7,11 @@
   <ItemGroup>
     <PackageReference Include="Grpc.Core.Api" Version="2.34.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-beta.1" />
     <PackageReference Include="PdfSharp" Version="1.50.5147" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha07" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="87.0.4280.8800" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
   </ItemGroup>
 
