--- a/MQuince/MQuince.Services.Contracts/MQuince.Services.Contracts.csproj
+++ b/MQuince/MQuince.Services.Contracts/MQuince.Services.Contracts.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-beta.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha07" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="87.0.4280.8800" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MQuince.Entities\MQuince.Entities.csproj" />
     <ProjectReference Include="..\MQuince.Enums\MQuince.Enums.csproj" />
   </ItemGroup>
