--- a/MQuince/MQuince.Services.Implementation/MQuince.Services.Implementation.csproj
+++ b/MQuince/MQuince.Services.Implementation/MQuince.Services.Implementation.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-beta.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha07" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="87.0.4280.8800" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
