--- a/MQuince/MQuince.Scheduler.Application/MQuince.Scheduler.Application.csproj
+++ b/MQuince/MQuince.Scheduler.Application/MQuince.Scheduler.Application.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+		<ProjectReference Include="..\MQuince.Infrastructure\MQuince.Infrastructure.csproj" />
+    <ProjectReference Include="..\MQuince.Scheduler.Domain\MQuince.Scheduler.Domain.csproj" />
+  </ItemGroup>
 
 
 </Project>
