Move contracts into separate project

--- a/MQuince/MQuince.Infrastructure/MQuince.Infrastructure.csproj
+++ b/MQuince/MQuince.Infrastructure/MQuince.Infrastructure.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MQuince.Review.Domain\MQuince.Review.Domain.csproj" />
+    <ProjectReference Include="..\MQuince.Scheduler.Contracts\MQuince.Scheduler.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Scheduler.Domain\MQuince.Scheduler.Domain.csproj" />
   </ItemGroup>
 
