--- a/MQuince/MQuince.Infrastructure/MQuince.Infrastructure.csproj
+++ b/MQuince/MQuince.Infrastructure/MQuince.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MQuince.Review.Contracts\MQuince.Review.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Review.Domain\MQuince.Review.Domain.csproj" />
     <ProjectReference Include="..\MQuince.Scheduler.Contracts\MQuince.Scheduler.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Scheduler.Domain\MQuince.Scheduler.Domain.csproj" />
