--- a/MQuince/MQuince.Review.Application/MQuince.Review.Application.csproj
+++ b/MQuince/MQuince.Review.Application/MQuince.Review.Application.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MQuince.Infrastructure\MQuince.Infrastructure.csproj" />
+    <ProjectReference Include="..\MQuince.Review.Contracts\MQuince.Review.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Review.Domain\MQuince.Review.Domain.csproj" />
   </ItemGroup>
 
