--- a/MQuince/MQuince.Scheduler.Application/Properties/launchSettings.json
+++ b/MQuince/MQuince.Scheduler.Application/Properties/launchSettings.json
@@ -19,9 +19,9 @@
     },
     "MQuince.Scheduler.Application": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
