--- a/MQuince/MQuince.StaffManagement.Application/Properties/launchSettings.json
+++ b/MQuince/MQuince.StaffManagement.Application/Properties/launchSettings.json
@@ -17,8 +17,8 @@
     },
     "MQuince.StaffManagement.Application": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5021",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
