--- a/MQuince/MQuince.Review.Application/MQuince.Review.Application.csproj
+++ b/MQuince/MQuince.Review.Application/MQuince.Review.Application.csproj
@@ -9,6 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MQuince.Review.Contracts\MQuince.Review.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Review.Domain\MQuince.Review.Domain.csproj" />
     <ProjectReference Include="..\MQuince.Review.Infrastructure\MQuince.Review.Infrastructure.csproj" />
