--- a/MQuince/MQuince.StaffManagement.Application/MQuince.StaffManagement.Application.csproj
+++ b/MQuince/MQuince.StaffManagement.Application/MQuince.StaffManagement.Application.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MQuince.StaffManagement.Contracts\MQuince.StaffManagement.Contracts.csproj" />
