--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   servers:
     build:
       context: ./MQuince
+      dockerfile: Dockerfile
       args:
         DATABASE_USERNAME: user
         DATABASE_PASSWORD: user
@@ -26,6 +27,130 @@ services:
       STAGE: dev
       SHOW_ENV: "TRUE"
       PORT: 5000
+    depends_on:
+      - mysql
+
+  review:
+    build:
+      context: ./MQuince
+      dockerfile: Dockerfile.Review
+      args:
+        DATABASE_USERNAME: user
+        DATABASE_PASSWORD: user
+        DATABASE_DOMAIN: mysql
+        DATABASE_SCHEMA: mquince
+        DATABASE_PORT: 3306
+        STAGE: dev
+        PORT: 5002
+    image: mquince-review-microservice
+    container_name: review
+    restart: on-failure
+    networks:
+      - demo
+    ports:
+      - 5002:5002
+    environment:
+      DATABASE_USERNAME: user
+      DATABASE_PASSWORD: user
+      DATABASE_DOMAIN: mysql
+      DATABASE_SCHEMA: mquince
+      DATABASE_PORT: 3306
+      STAGE: dev
+      SHOW_ENV: "TRUE"
+      PORT: 5002
+    depends_on:
+      - mysql
+
+  autentication:
+    build:
+      context: ./MQuince
+      dockerfile: Dockerfile.Autentication
+      args:
+        DATABASE_USERNAME: user
+        DATABASE_PASSWORD: user
+        DATABASE_DOMAIN: mysql
+        DATABASE_SCHEMA: mquince
+        DATABASE_PORT: 3306
+        STAGE: dev
+        PORT: 5001
+    image: mquince-autentication-microservice
+    container_name: autentication
+    restart: on-failure
+    networks:
+      - demo
+    ports:
+      - 5001:5001
+    environment:
+      DATABASE_USERNAME: user
+      DATABASE_PASSWORD: user
+      DATABASE_DOMAIN: mysql
+      DATABASE_SCHEMA: mquince
+      DATABASE_PORT: 3306
+      STAGE: dev
+      SHOW_ENV: "TRUE"
+      PORT: 5001
+    depends_on:
+      - mysql
+
+  scheduler:
+    build:
+      context: ./MQuince
+      dockerfile: Dockerfile.Scheduler
+      args:
+        DATABASE_USERNAME: user
+        DATABASE_PASSWORD: user
+        DATABASE_DOMAIN: mysql
+        DATABASE_SCHEMA: mquince
+        DATABASE_PORT: 3306
+        STAGE: dev
+        PORT: 5004
+    image: mquince-scheduler-microservice
+    container_name: scheduler
+    restart: on-failure
+    networks:
+      - demo
+    ports:
+      - 5004:5004
+    environment:
+      DATABASE_USERNAME: user
+      DATABASE_PASSWORD: user
+      DATABASE_DOMAIN: mysql
+      DATABASE_SCHEMA: mquince
+      DATABASE_PORT: 3306
+      STAGE: dev
+      SHOW_ENV: "TRUE"
+      PORT: 5004
+    depends_on:
+      - mysql
+
+  staff:
+    build:
+      context: ./MQuince
+      dockerfile: Dockerfile.StaffManagement
+      args:
+        DATABASE_USERNAME: user
+        DATABASE_PASSWORD: user
+        DATABASE_DOMAIN: mysql
+        DATABASE_SCHEMA: mquince
+        DATABASE_PORT: 3306
+        STAGE: dev
+        PORT: 5003
+    image: mquince-staff-microservice
+    container_name: staff
+    restart: on-failure
+    networks:
+      - demo
+    ports:
+      - 5003:5003
+    environment:
+      DATABASE_USERNAME: user
+      DATABASE_PASSWORD: user
+      DATABASE_DOMAIN: mysql
+      DATABASE_SCHEMA: mquince
+      DATABASE_PORT: 3306
+      STAGE: dev
+      SHOW_ENV: "TRUE"
+      PORT: 5003
     depends_on:
       - mysql
 
