--- a/MQuince/Dockerfile.Integration
+++ b/MQuince/Dockerfile.Integration
@@ -1,19 +1,33 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
 WORKDIR /app
 
-COPY MQuince.WebAPI.Integration.Testing/MQuince.WebAPI.Integration.Testing.csproj MQuince.WebAPI.Integration.Testing/
-COPY MQuince.WebAPI/MQuince.WebAPI.csproj MQuince.WebAPI/
-COPY MQuince.Services.Contracts/MQuince.Services.Contracts.csproj MQuince.Services.Contracts/
-COPY MQuince.Entities/MQuince.Entities.csproj MQuince.Entities/
-COPY MQuince.Enums/MQuince.Enums.csproj MQuince.Enums/
-COPY MQuince.Application/MQuince.Application.csproj MQuince.Application/
-COPY MQuince.Repository.Contracts/MQuince.Repository.Contracts.csproj MQuince.Repository.Contracts/
-COPY MQuince.Services.Implementation/MQuince.Services.Implementation.csproj MQuince.Services.Implementation/
-COPY MQuince.Repository.SQL/MQuince.Repository.SQL.csproj MQuince.Repository.SQL/
-COPY MQuince.Services.Tests/MQuince.Services.Tests.csproj MQuince.Services.Tests/
+COPY MQuince.APIGateway/MQuince.APIGateway.csproj MQuince.APIGateway/
+COPY MQuince.StaffManagement.Application/MQuince.StaffManagement.Application.csproj MQuince.StaffManagement.Application/
+COPY MQuince.StaffManagement.Contracts/MQuince.StaffManagement.Contracts.csproj MQuince.StaffManagement.Contracts/
+COPY MQuince.StaffManagement.Infrastructure/MQuince.StaffManagement.Infrastructure.csproj MQuince.StaffManagement.Infrastructure/
+COPY MQuince.StaffManagement.Domain/MQuince.StaffManagement.Domain.csproj MQuince.StaffManagement.Domain/
+COPY MQuince.StaffManagement.Integration.Testing/MQuince.StaffManagement.Integration.Testing.csproj MQuince.StaffManagement.Integration.Testing/
 
-RUN dotnet restore MQuince.WebAPI/MQuince.WebAPI.csproj
-RUN dotnet restore MQuince.WebAPI.Integration.Testing/MQuince.WebAPI.Integration.Testing.csproj
+COPY MQuince.Scheduler.Application/MQuince.Scheduler.Application.csproj MQuince.Scheduler.Application/
+COPY MQuince.Scheduler.Contracts/MQuince.Scheduler.Contracts.csproj MQuince.Scheduler.Contracts/
+COPY MQuince.Scheduler.Infrastructure/MQuince.Scheduler.Infrastructure.csproj MQuince.Scheduler.Infrastructure/
+COPY MQuince.Scheduler.Domain/MQuince.Scheduler.Domain.csproj MQuince.Scheduler.Domain/
+COPY MQuince.Scheduler.Integration.Testing/MQuince.Scheduler.Integration.Testing.csproj MQuince.Scheduler.Integration.Testing/
+
+COPY MQuince.Autentication.Application/MQuince.Autentication.Application.csproj MQuince.Autentication.Application/
+COPY MQuince.Autentication.Contracts/MQuince.Autentication.Contracts.csproj MQuince.Autentication.Contracts/
+COPY MQuince.Autentication.Infrastructure/MQuince.Autentication.Infrastructure.csproj MQuince.Autentication.Infrastructure/
+COPY MQuince.Autentication.Domain/MQuince.Autentication.Domain.csproj MQuince.Autentication.Domain/
+COPY MQuince.Autentication.Integration.Testing/MQuince.Autentication.Integration.Testing.csproj MQuince.Autentication.Integration.Testing/
+
+COPY MQuince.Review.Domain/MQuince.Review.Domain.csproj MQuince.Review.Domain/
+COPY MQuince.Infrastructure/MQuince.Infrastructure.csproj MQuince.Infrastructure/
+COPY MQuince.Core/MQuince.Core.csproj MQuince.Core/
+
+RUN dotnet restore MQuince.APIGateway/MQuince.APIGateway.csproj
+RUN dotnet restore MQuince.StaffManagement.Integration.Testing/MQuince.StaffManagement.Integration.Testing.csproj
+RUN dotnet restore MQuince.Scheduler.Integration.Testing/MQuince.Scheduler.Integration.Testing.csproj
+RUN dotnet restore MQuince.Autentication.Integration.Testing/MQuince.Autentication.Integration.Testing.csproj
 
 COPY . .
 
@@ -35,7 +49,7 @@ ENV DATABASE_PORT = $DATABASE_PORT
 ENV STAGE = $STAGE
 ENV PORT = $PORT
 
-WORKDIR /app/MQuince.WebAPI
+WORKDIR /app/MQuince.APIGateway
 ENV PATH $PATH:/root/.dotnet/tools
 RUN dotnet tool install -g dotnet-ef --version 3.1.0
 RUN dotnet ef migrations add Init
