--- a/MQuince/MQuince.Integration.Infrastructure/MQuince.Integration.Infrastructure.csproj
+++ b/MQuince/MQuince.Integration.Infrastructure/MQuince.Integration.Infrastructure.csproj
@@ -6,17 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MQuince.Integration.Entities\MQuince.Integration.Entities.csproj" />
-    <ProjectReference Include="..\MQuince.Integration.Repository.Contracts\MQuince.Integration.Repository.Contracts.csproj" />
-    <ProjectReference Include="..\MQuince.Integration.Services.Constracts\MQuince.Integration.Services.Constracts.csproj" />
   </ItemGroup>
 
 </Project>
