Refactor action and benefits according to ddd

--- a/MQuince/MQuince.Integration.HospitalApp/MQuince.Integration.HospitalApp.csproj
+++ b/MQuince/MQuince.Integration.HospitalApp/MQuince.Integration.HospitalApp.csproj
@@ -41,8 +41,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MQuince.ActionAndBenefits.Contracts\MQuince.ActionAndBenefits.Contracts.csproj" />
+    <ProjectReference Include="..\MQuince.ActionAndBenefits.Infrastructure\MQuince.ActionAndBenefits.Infrastructure.csproj" />
+    <ProjectReference Include="..\MQuince.ActionAndBenefits.Services\MQuince.ActionAndBenefits.Services.csproj" />
     <ProjectReference Include="..\MQuince.Integration.Entities\MQuince.Integration.Entities.csproj" />
     <ProjectReference Include="..\MQuince.Integration.Services.Implementation\MQuince.Integration.Services.Implementation.csproj" />
+
     <ProjectReference Include="..\MQuince.Pharmacy.Contracts\MQuince.Pharmacy.Contracts.csproj" />
     <ProjectReference Include="..\MQuince.Pharmacy.Infrastructure\MQuince.Pharmacy.Infrastructure.csproj" />
     <ProjectReference Include="..\MQuince.Pharmacy.Services\MQuince.Pharmacy.Services.csproj" />
