--- a/MQuince/MQuince.Integration.HospitalApp.Tests/MQuince.Integration.HospitalApp.Tests.csproj
+++ b/MQuince/MQuince.Integration.HospitalApp.Tests/MQuince.Integration.HospitalApp.Tests.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MQuince.ActionAndBenefits.Domain\MQuince.ActionAndBenefits.Domain.csproj" />
+    <ProjectReference Include="..\MQuince.ActionAndBenefits.Infrastructure\MQuince.ActionAndBenefits.Infrastructure.csproj" />
+    <ProjectReference Include="..\MQuince.ActionAndBenefits.Services\MQuince.ActionAndBenefits.Services.csproj" />
     <ProjectReference Include="..\MQuince.Integration.Repository.MySQL\MQuince.Integration.Repository.MySQL.csproj" />
     <ProjectReference Include="..\MQuince.Integration.Services.Implementation\MQuince.Integration.Services.Implementation.csproj" />
     <ProjectReference Include="..\MQuince.Pharmacy.Services\MQuince.Pharmacy.Services.csproj" />
