Add persistance and save events when creating appointment

--- a/MQuince/MQuince.APIGateway/MQuince.APIGateway.csproj
+++ b/MQuince/MQuince.APIGateway/MQuince.APIGateway.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210115181603_initial5.cs" />
+    <Compile Remove="Migrations\20210115181603_initial5.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
